--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
           id="bs-example-navbar-collapse-1">
         <% if logged_in? %>
           <li><%= link_to "Home", "/" %></li>
-          <li><%= link_to "About", "/about" %></li>
+          <li><%= link_to "About", "/static_pages/about" %></li>
           <li><%= link_to "User", user_path(current_user) %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
